add android lab05

--- a/Android/lab04/2019212212236_苏桐渤.html
+++ b/Android/lab04/2019212212236_苏桐渤.html
@@ -261,10 +261,15 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h3 class="mume-header" id="%E5%AE%9E%E9%AA%8C%E7%9B%AE%E7%9A%84">&#x5B9E;&#x9A8C;&#x76EE;&#x7684;</h3>
+      <center>
+    <h2>&#x300A;Android&#x5E94;&#x7528;&#x5F00;&#x53D1;&#x300B;&#x8BFE;&#x7A0B;</h2>  
+    <h2>&#x5B9E;&#x9A8C;&#x62A5;&#x544A;</h2>
+<p><strong>&#x59D3;&#x540D;</strong> &#x82CF;&#x6850;&#x6E24; &#x2002; <strong>&#x5B66;&#x53F7;</strong> 2019212212236 &#x2002; <strong>&#x73ED;&#x7EA7;</strong> &#x8F6F;&#x5DE5;192<br>
+<strong>&#x5B9E;&#x9A8C;&#x540D;&#x79F0;</strong> &#x6D3B;&#x52A8;&#x7684;&#x751F;&#x547D;&#x5468;&#x671F; &#x2002; <strong>&#x5B9E;&#x9A8C;&#x65E5;&#x671F;</strong> 2021/09/28</p>
+</center>
+<h3 class="mume-header" id="%E5%AE%9E%E9%AA%8C%E7%9B%AE%E7%9A%84">&#x5B9E;&#x9A8C;&#x76EE;&#x7684;</h3>
 
-<p>&#x4E86;&#x89E3;&#x5E76;&#x638C;&#x63E1;&#x6D3B;&#x52A8;&#x7684;&#x751F;&#x547D;&#x5468;&#x671F;&#x65B9;&#x6CD5;&#xFF0C;&#x901A;&#x8FC7;&#x8BB0;&#x5F55;&#x65E5;&#x5FD7;&#x7684;&#x65B9;&#x5F0F;&#x7406;&#x89E3;&#x6D3B;&#x52A8;&#x7684;&#x751F;&#x547D;&#x5468;&#x671F;&#xFF0C;&#x540C;&#x65F6;&#x638C;&#x63E1;<br>
-&#x65E5;&#x5FD7;&#x5DE5;&#x5177; LogCat &#x7684;&#x4F7F;&#x7528;&#x65B9;&#x6CD5;&#x3002;</p>
+<p>&#x4E86;&#x89E3;&#x5E76;&#x638C;&#x63E1;&#x6D3B;&#x52A8;&#x7684;&#x751F;&#x547D;&#x5468;&#x671F;&#x65B9;&#x6CD5;&#xFF0C;&#x901A;&#x8FC7;&#x8BB0;&#x5F55;&#x65E5;&#x5FD7;&#x7684;&#x65B9;&#x5F0F;&#x7406;&#x89E3;&#x6D3B;&#x52A8;&#x7684;&#x751F;&#x547D;&#x5468;&#x671F;&#xFF0C;&#x540C;&#x65F6;&#x638C;&#x63E1;&#x65E5;&#x5FD7;&#x5DE5;&#x5177; LogCat &#x7684;&#x4F7F;&#x7528;&#x65B9;&#x6CD5;&#x3002;</p>
 <h3 class="mume-header" id="%E5%AE%9E%E9%AA%8C%E5%86%85%E5%AE%B9">&#x5B9E;&#x9A8C;&#x5185;&#x5BB9;</h3>
 
 <ul>
